// Copyright 2022 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.reporting.v1alpha;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";

option java_package = "org.wfanet.measurement.reporting.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "ReportingSetProto";

// Resource that describes a set of events that can be used as an operand for a
// `SetOperation`.
message ReportingSet {
  option (google.api.resource) = {
    type: "reporting.halo-cmm.org/ReportingSet"
    pattern: "measurementConsumers/{measurement_consumer}/reportingSets/{reporting_set}"
  };

  // Resource name.
  string name = 1;

  // Set of EventGroup resource names.
  repeated string event_groups = 2 [
    (google.api.resource_reference).type = "reporting.halo-cmm.org/EventGroup",
    (google.api.field_behavior) = REQUIRED,
    (google.api.field_behavior) = IMMUTABLE
  ];

  // CEL filter predicate that applies to all `event_groups`.
  //
  // This filter and the one in the `event_group_filters` form a conjunction
  // that specifies which impressions are included in this set. If
  // unspecified, evaluates to `true`.
  string filter = 3 [(google.api.field_behavior) = IMMUTABLE];

  // Human-readable name for display purposes.
  string display_name = 4;
}
